# game-project

./: CMakeLists.txt  build.bat  run.bat
resources/icon/: resource.rc
source/: CMakeLists.txt  game.cpp  game.h  macro_util.cpp  macro_util.h  png.cpp  png.h  stream.cpp  stream.h  types.h  wav.cpp  wav.h
source/asset/: wav.cpp  wav.h
source/engine/: CMakeLists.txt
source/engine/include/engine/asset/: wav.h
source/engine/include/engine/platform/: event.h  os.h
source/engine/include/engine/platform/render/: ogl.h
source/engine/src/asset/: wav.cpp
source/engine/src/platform/os/: win32.cpp  win32.h
source/engine/src/platform/render/: ogl.cpp
source/game/: CMakeLists.txt  main.cpp
source/platform/: os.h  platform.h  win32.cpp
source/platform/os/: win32.cpp
source/platform/render/: ogl.cpp  render.h  render_ogl.cpp  render_ogl.h  win32_ogl.cpp  win32_render.h
source/render/: render.cpp  render.h  render_ogl.cpp  render_ogl.h  win32_ogl.cpp  win32_render.h
source/util/: assert.h
